sandbox/output
PatientTest.java:9: error: cannot find symbol
        int actual = Hiker.answer();
                     ^
  symbol:   variable Hiker
  location: class PatientTest
1 error
